added style.css, edited index.html

--- a/fav movie/index.html
+++ b/fav movie/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Meu filme favorito</title>
 </head>
 
@@ -11,16 +12,17 @@
     <h1 id="title">
         The Witcher: Lenda do Lobo (Netflix)
     </h1>
-
-    <section id="sinopse">
-        <h2>Sinopse</h2>
-        <p>Ele escapou da pobreza para caçar monstros por dinheiro e glória, mas quando surge uma nova ameaça, Vesemir
-            precisa enfrentar os demônios do passado.</p>
-    </section>
-    <section id="basic_info">
-        <h2>Informações Básicas</h2>
-        <p><b>Ano:</b> 2021</p>
-        <p><b>Gênero:</b> Anime, Animação, Ação, Fantasia</p>
+    
+    <article class="lobby">
+        <section id="sinopse">
+            <h2>Sinopse</h2>
+            <p>Ele escapou da pobreza para caçar monstros por dinheiro e glória, mas quando surge uma nova ameaça, Vesemir
+                precisa enfrentar os demônios do passado.</p>
+            </section>
+            <section id="basic_info">
+                <h2>Informações Básicas</h2>
+                <p><b>Ano:</b> 2021</p>
+                <p><b>Gênero:</b> Anime, Animação, Ação, Fantasia</p>
         <p><b>Duração:</b> 83 min(1h23)</p>
     </section>
 
@@ -46,7 +48,8 @@
                 <a href="#Geralt_bottom">Geralt</a>
             </li>
         </ul>
-
+    </article>
+        
         <table border="1">
             <tr>
                 <th>Personagem</th>
